# trading-rl-mle

./: .gitignore  environment.yml  pyproject.toml  test_config.py
configs/: config.yaml
configs/agent/: ppo.yaml
configs/env/: default.yaml
src/data/: etl.py
src/envs/: __init__.py  trading_env.py
src/models/: evaluate.py  train.py
